--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,3 +1,6 @@
+.projects {
+  @apply md:h-screen;
+}
 .project-container {
   @apply container md:max-w-7xl mx-auto px-6 py-16 md:py-32 md:text-center space-y-3;
 }
